--- a/README
+++ b/README
@@ -1,3 +1,9 @@
 App for International Space Apps Challenge Tokyo 2013.
 
 International Space Apps Challenge Tokyo 2013参加用のアプリです。
+
+Installation 
+
+Download all of the files then open index.html with your browser. 
+Caution: It makes a sound.
+
